readme.md update, fixed page display on mobiles

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-    width: 100%;
+    width: 98%;
     text-align: center;
     color: rgb(200, 200, 200);
     font-family: 'Lato', sans-serif;
